# agentic-tamp

./: .gitignore  README.md  RESULTS.md  pyproject.toml  run_ci_checks.sh
agentic_tamp/: __init__.py  agent_solver.py  baseline.py  compare.py  instances.py  plan_io.py  prompts.py  quiet.py  sandbox_runner.py  serialize.py  sweep.py  validate.py
docker/: Dockerfile  build.sh  check_move.py
results/doors_2D_d10_c0_RRT_all/: results.json
results/doors_2D_d10_c0_RRT_none/: results.json
results/doors_2D_d10_c1_RRT_all/: results.json
results/doors_2D_d10_c1_RRT_none/: results.json
results/doors_2D_d10_c2_RRT_all/: results.json
results/doors_2D_d10_c2_RRT_none/: results.json
results/doors_2D_d10_c3_RRT_all/: results.json
results/doors_2D_d10_c3_RRT_none/: results.json
results/doors_2D_d1_c0_RRT_none/: results.json
results/doors_2D_d2_c0_RRT_none/: results.json
results/rover_2D_d10_c4_RRT_all/: results.json
results/rover_2D_d2_c0_RRT_all/: results.json
results/rover_2D_d2_c0_RRT_none/: results.json
results/rover_2D_d2_c2_RRT_all/: results.json
results/rover_2D_d4_c0_RRT_all/: results.json
results/rover_2D_d4_c4_RRT_all/: results.json
results/rover_2D_d8_c0_RRT_all/: results.json
